bayo-web-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bayo-web-server
  name: bayo-web-server
  namespace: bayodev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bayo-web-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bayo-web-server
    spec:
      containers:
      - image: k3d-test-app-registry:5050/bayo-nginx:v1
        imagePullPolicy: IfNotPresent
        name: bayo-nginx-image
        ports:
        - containerPort: 80
          protocol: TCP
