bayo-web-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bayo-web-server-svc
  name: bayo-web-server-svc
  namespace: bayodev
spec:
  ports:
  - name: svc-port-mapping
    nodePort: 30090
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bayo-web-server
  sessionAffinity: None
  type: NodePort
